--- a/modes/viewer/templates/viewermenu.html
+++ b/modes/viewer/templates/viewermenu.html
@@ -8,7 +8,7 @@
 <li>Annotation Focus
 <ul id="annotationsfocusmenu">
 </ul>
-<li>Annotation Details
+<li>View Annotations
 <ul id="annotationsviewmenu">
 </ul>
 </li>
