--- a/templates/base.html
+++ b/templates/base.html
@@ -84,5 +84,9 @@
         <div id="wait">
             <img src="/style/loader.gif" alt="processing" />
         </div>
+
+        <div id="footer">
+            FoLiA Linguistic Annotation Tool - by Maarten van Gompel - Centre for Language and Speech Technology - Radboud University Nijmegen
+        </div>
     </body>
 </html>
