--- a/style/flat.css
+++ b/style/flat.css
@@ -202,3 +202,10 @@ nav ul ul li.on {
 #uploadform {
     display: none;
 }
+#footer {
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
+    font-family: monospace;
+    font-size: 80%;
+}
