--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
         </div>
 
         <div id="footer">
-            FoLiA Linguistic Annotation Tool - by Maarten van Gompel - Centre for Language and Speech Technology - Radboud University Nijmegen
+            <a href="http://proycon.github.io/folia"><strong>FoLiA Linguistic Annotation Tool</strong></a> ({{ version }}) - by Maarten van Gompel - Centre for Language and Speech Technology - Radboud University Nijmegen
         </div>
     </body>
 </html>
