--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block js %}
+initialcorrectionset = '{{ initialcorrectionset }}';
 {% for editform in editforms %}
 editforms = {}
 editforms['{{ editform }}'] = true;
