--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -35,7 +35,7 @@ editforms['{{ editform }}'] = true;
 </li>
 <li>Tools &amp; Options
 <ul id="toolsandoptions">
-    {% if configuration.items.allowdeclare %}
+    {% if configuration.allowdeclare %}
     <li><a href="javascript:declare()">Add new Annotation Type</a></li>
     {% endif %}
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
