--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -40,6 +40,7 @@ editforms['{{ editform }}'] = true;
     {% endif %}
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
     <li><a href="javascript:showhistory()">History &amp; Undo</a></li>
+    <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show uncorrected text</a></li>
 </ul>
 </li>
 {% endblock %}
