--- a/modes/viewer/templates/viewer.html
+++ b/modes/viewer/templates/viewer.html
@@ -3,6 +3,11 @@
 
 {% block menu %}
 {% include "viewermenu.html" %}
+<li>Tools &amp; Options
+<ul id="toolsandoptions">
+    <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
+    <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show uncorrected text</a></li>
+</ul>
 {% endblock %}
 
 {% block dialogs %}
