--- a/style/flat.css
+++ b/style/flat.css
@@ -119,13 +119,13 @@ ul#doclist {
 }
 ul#doclist>li {
     font-weight: bold;
-    font-size: 120%;
 }
 ul#doclist>li>ul {
     list-style: none;
     margin: 0px;
 }
 ul#doclist>li>ul>li {
+    background: #eee;
     border-top: 1px #ddd solid;
     border-bottom: 1px #ddd solid;
     font-weight: normal;
