--- a/style/flat.css
+++ b/style/flat.css
@@ -127,8 +127,8 @@ ul#doclist>li>ul {
 }
 ul#doclist>li>ul>li {
     background: #eee;
-    border-top: 1px #ddd solid;
-    border-bottom: 1px #ddd solid;
+    border-top: 1px #fff solid;
+    border-bottom: 1px #ccc solid;
     font-weight: normal;
     padding-left: 20px;
     padding-top: 3px;
