--- a/style/flat.editor.css
+++ b/style/flat.editor.css
@@ -117,6 +117,10 @@ div#newdeclaration button, div#history button {
     margin-top: -5px;
     background: #30677c;
 }
+span.editforms {
+    display: inline-block;
+    white-space: nowrap;
+}
 span.editforms form {
     display: inline;
 }
