--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -28,7 +28,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
     <li id="editformalternative"><a href="javascript:toggleeditform('alternative')">Edit as alternative (A)</a></li>
     {% endif %}
     {% if configuration.alloweditformnew %}
-    <li id="editformalternative"><a href="javascript:toggleeditform('new')">Add as new (N)</a></li>
+    <li id="editformnew"><a href="javascript:toggleeditform('new')">Add as new (N)</a></li>
     {% endif %}
 </ul>
 </li>
