--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -40,6 +40,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
     <li><a href="javascript:showhistory()">History &amp; Undo</a></li>
     <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show uncorrected text</a></li>
+    <li><a href="/download/{{ namespace }}/{{ docid }}.folia.xml">View FoLiA XML source</a></li>
 </ul>
 </li>
 {% endblock %}
