--- a/style/flat.css
+++ b/style/flat.css
@@ -98,6 +98,7 @@ div.buttoncontainer {
     text-align: center;
 }
 #topbar span.title {
+    background: url(logo.svg);
     font-weight: bold;
     text-align: center;
     color: #cbd9de;
