--- a/templates/index.html
+++ b/templates/index.html
@@ -2,6 +2,8 @@
 
 
 {% block main %}
+<img id="logo" src="/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
+
 <div id="uploadform" class="dialog">
     <h3>Upload</h3>
     <p>
