--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -65,6 +65,9 @@ Correction set: <select id="editformcorrectionset"></select>
         <button id="editoraddfield">+</button></span>
     </div>
     <div class="buttoncontainer">
+        <div id="openinconsolecontainer">
+            <input id="openinconsole" type="check" /> Open in console
+        </div>
         <button id="editorsubmit">Ok</button>
     </div>
 </div>
