--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -66,7 +66,7 @@ Correction set: <select id="editformcorrectionset"></select>
     </div>
     <div class="buttoncontainer">
         <div id="openinconsolecontainer">
-            <input id="openinconsole" type="check" /> Open in console
+            <input id="openinconsole" type="checkbox" /> Open in console
         </div>
         <button id="editorsubmit">Ok</button>
     </div>
