--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -40,6 +40,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
     <li id="toggleannotatordetails"><a href="javascript:toggleannotatordetails()">Show annotator details</a></li>
     <li><a href="javascript:showhistory()">History &amp; Undo</a></li>
     <li id="toggleoriginal"><a href="javascript:toggleoriginal()">Show uncorrected text</a></li>
+    <li><a href="javascript:openconsole()">Query Console</a></li>
     <li><a href="/download/{{ namespace }}/{{ docid }}.folia.xml">View FoLiA XML source</a></li>
 </ul>
 </li>
@@ -88,6 +89,20 @@ Correction set: <select id="editformcorrectionset"></select>
         <button id="historydiscard">x</button>
     </div>
     <div id="historybody">
+    </div>
+</div>
+<div id="console" class="dialog">
+    <div id="consoleheader">
+        <span>Query Console</span>
+        <button id="consolediscard">x</button>
+    </div>
+    <div id="consolebody">
+        Queries in FoLiA Query Language:<br />
+        <textarea id="queryinput"></textarea>
+
+        <div class="buttoncontainer">
+            <button id="editorsubmit">Ok</button>
+        </div>
     </div>
 </div>
 {% endblock %}
