--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -67,7 +67,7 @@ Correction set: <select id="editformcorrectionset"></select>
     </div>
     <div class="buttoncontainer">
         <div id="openinconsolecontainer">
-            <input id="openinconsole" type="checkbox" /> Open in console
+            <input id="openinconsole" type="checkbox" /> Delegate to console
         </div>
         <button id="editorsubmit">Ok</button>
     </div>
@@ -101,7 +101,7 @@ Correction set: <select id="editformcorrectionset"></select>
         <textarea id="queryinput"></textarea>
 
         <div class="buttoncontainer">
-            <button id="editorsubmit">Ok</button>
+            <button id="consolesubmit">Ok</button>
         </div>
     </div>
 </div>
