added clear button to console

--- a/modes/editor/templates/editor.html
+++ b/modes/editor/templates/editor.html
@@ -97,7 +97,7 @@ Correction set: <select id="editformcorrectionset"></select>
         <button id="consolediscard">x</button>
     </div>
     <div id="consolebody">
-        Queries in FoLiA Query Language:<br />
+        Queries in FoLiA Query Language: <button onclick="$('#queryinput').val('');">Clear</button><br />
         <textarea id="queryinput"></textarea>
 
         <div class="buttoncontainer">
