--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,11 @@
         <title>FoLiA Linguistic Annotation Tool</title>
         <script type="text/javascript" src="/style/jquery-1.10.2.min.js"></script>
         <script type="text/javascript" src="/style/jquery-ui.min.js"></script>
+        {% if namespace == "testflat" %}
+            <link rel="StyleSheet" href="/style/qunit-1.15.0.css" type="text/css" />
+            <script type="text/javascript" src="/style/qunit-1.15.0.js"></script>
+            <script type="text/javascript" src="/style/testflat.js"></script>
+        {% endif %}
         <link rel="StyleSheet" href="/style/flat.css" type="text/css" />
         <script type="text/javascript" src="/style/flat.js"></script> 
         {% block head %}
@@ -80,6 +85,11 @@
             {% block main %}
             {% endblock %}
         </div>
+
+
+        {% if namespace == "testflat" %}
+        <div id="qunit-fixture"></div>
+        {% endif %}
         
         <div id="wait">
             <img src="/style/loader.gif" alt="processing" />
