--- a/templates/base.html
+++ b/templates/base.html
@@ -88,6 +88,7 @@
 
 
         {% if namespace == "testflat" %}
+        <div id="qunit"></div>
         <div id="qunit-fixture"></div>
         {% endif %}
         
