--- a/style/flat.editor.css
+++ b/style/flat.editor.css
@@ -160,3 +160,8 @@ span.text {
     width: 90%;
     min-height: 320px;
 }
+div#qunit {
+    width: 60%;
+    margin-left: auto;
+    margin-right: auto;
+}
