--- a/templates/register.html
+++ b/templates/register.html
@@ -2,11 +2,13 @@
 
 {% block title %}Create an account{% endblock %}
 
-{% block content %}
-  <h1>Create an account</h1>
-
+{% block main %}
+<img id="logo" src="/style/logo.svg" alt="FoLiA Linguistic Annotation Tool" />
+<div id="logindialog" class="dialog">
+  <h3>Create an account</h3>
     <form action="" method="post">
         {{ form.as_p }}
         <input type="submit" value="Create the account">
     </form>
+</div>
 {% endblock %}
