--- a/templates/register.html
+++ b/templates/register.html
@@ -9,6 +9,7 @@
     <form action="" method="post">
         {{ form.as_p }}
         <input type="submit" value="Create the account">
+        {% csrf_token %}
     </form>
 </div>
 {% endblock %}
