--- a/templates/login.html
+++ b/templates/login.html
@@ -21,6 +21,9 @@
     </select></br>
     <div class="buttoncontainer">
         <input class="button" type="submit" value="Log in" />
+        <span class="helptext">
+            (no account yet? <a href="/register/">Register here</a>)
+        </span>
     </div>
     {% csrf_token %}
     </form>
