--- a/flat/style/flat.viewer.css
+++ b/flat/style/flat.viewer.css
@@ -5,13 +5,14 @@ div.div, div.p {
     display: block;
     margin-bottom: 5px;
 }
-div.s, div.w {
+div.s, div.w,div.part,div.s div.quote,div.p div.quote {
     display: inline;
 }
 div.head {
     font-size: 120%;
     font-weight: bold;
     margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 span.lbl {
