adding support for global visualisation annotation

--- a/flat/modes/editor/templates/editor.html
+++ b/flat/modes/editor/templates/editor.html
@@ -12,7 +12,7 @@ initialcorrectionset = '{{ initialcorrectionset }}';
 
 {% block menu %}
 {% include "viewermenu.html" %}
-<li>Edit Annotations
+<li>Editor Annotations
 <ul id="annotationseditviewmenu">
 </ul>
 </li>
