--- a/flat/modes/viewer/templates/viewermenu.html
+++ b/flat/modes/viewer/templates/viewermenu.html
@@ -2,7 +2,10 @@
 <ul id="annotationsfocusmenu">
 </ul>
 </li>
-<li>View Annotations
+<li>Global annotations
+<ul id="globannotationsviewmenu">
+</ul>
+<li>Local annotations
 <ul id="annotationsviewmenu">
 </ul>
 </li>
