document index update, namespaces can be nested and added from the interface

--- a/flat/style/flat.css
+++ b/flat/style/flat.css
@@ -111,7 +111,7 @@ h3 {
     color: #30677c;
     margin-top: -5px;
 }
-ul#doclist {
+ul#doclist,ul#dirlist {
     border: #30677c 1px solid;
     border-radius: 5px;
     padding: 2px;
@@ -120,16 +120,12 @@ ul#doclist {
     color: black;
     min-height: 50px;
     list-style: none;
+    clear: both; 
 }
-ul#doclist>li {
+ul#dirlist>li {
     font-weight: bold;
 }
-ul#doclist>li>ul {
-    list-style: none;
-    margin: 0px;
-    padding: 0px;
-}
-ul#doclist>li>ul>li {
+ul#doclist>li, ul#dirlist>li {
     background: #eee;
     border-top: 1px #fff solid;
     border-bottom: 1px #ccc solid;
@@ -138,7 +134,7 @@ ul#doclist>li>ul>li {
     padding-top: 3px;
     padding-bottom: 3px;
 }
-ul#doclist>li>ul>li:hover {
+ul#doclist>li:hover, ul#dirlist>li:hover {
     background: #ddd;
 }
 #doclist span {
@@ -225,11 +221,14 @@ nav ul ul li.on {
     margin-left: 20px;
 }
 
-.uploadcontainer {
-    width: 100%;
-    text-align: right;
+.indexbuttoncontainer {
+    float: right;
+    margin-bottom: 4px;
 }
 #uploadform {
+    display: none;
+}
+#adddirectoryform {
     display: none;
 }
 #footer {
@@ -250,4 +249,22 @@ img#logo {
 }
 span.helptext {
     display: block;
+}
+#aborted {
+    display: none;
+    width: 50%;
+    color: #aa0000;
+    border: 2px dashed #aa0000;
+    padding: 30px;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    font-size: 110%;
+}
+#aborted strong {
+    font-size: 110%;
+}
+#aborted span.help {
+    font-size: 70%;
+    font-style: italic;
 }
